# astroloh

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  FINAL_PYTEST_REPORT.md  GEMINI.md  Makefile  README.md  README_DESIGN_SYSTEM.md  SECURITY.md  SUPPORT.md  alembic.ini  astroloh.db  debug_flow.py  debug_goodbye.py  debug_goodbye_detailed.py  debug_intent.py  deployment_config.py  dialog_improvements_example.py  docker-compose.dev.yml  docker-compose.ngrok.yml  docker-compose.yml  kerykeion_fallback_report.md  pyproject.toml  pytest.ini  requirements.txt  test_astrology_fix.py  test_deployment_validation.py  test_kerykeion.py  test_kerykeion_integration.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  test.yml
app/: main.py
app/api/: astrology.py  auth.py  deployment.py  google_assistant.py  iot_api.py  lunar.py  recommendations.py  security.py  telegram_bot.py  yandex_dialogs.py
app/core/: auth.py  config.py  database.py  logging_config.py  multi_platform_config.py
app/models/: database.py  google_models.py  iot_models.py  platform_models.py  recommendation_models.py  telegram_models.py  transit_models.py  yandex_models.py
app/services/: ab_testing_service.py  ai_content_filter.py  ai_horoscope_service.py  astro_ai_service.py  astro_cache_service.py  astrology_calculator.py  async_kerykeion_service.py  cache_service.py  compatibility_analyzer.py  conversation_manager.py  deployment_monitor.py  dialog_error.py  dialog_flow_manager.py  dialog_handler.py  encryption.py  enhanced_transit_service.py  error_recovery.py  feature_flag_service.py  gdpr_compliance.py  google_adapter.py  home_automation_service.py  horoscope_generator.py  intent_recognition.py  iot_analytics_service.py  iot_manager.py  iot_protocols.py  kerykeion_service.py  lunar_calendar.py  ml_analytics.py  ml_analytics_service.py  multi_platform_formatter.py  multi_platform_handler.py  natal_chart.py  performance_monitor.py  personalization_service.py  precompute_service.py  progression_service.py  recommendation_engine.py  response_formatter.py  rollback_system.py  (+12 more)
app/utils/: error_handler.py  validators.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMPREHENSIVE_WEBSITE_TEST_REPORT.md  DATABASE_SCHEMA.md  DEPLOYMENT_GUIDE.md  DESIGN_SYSTEM.md  DESIGN_SYSTEM_GUIDE.md  DEVELOPER_SETUP.md  DOCKER_DEPLOYMENT.md  FINAL_PYTEST_REPORT.md  FRONTEND_GUIDE.md  INDEX.md  KERYKEION_TESTING_FRAMEWORK.md  MVP_CHECKLIST.md  NGROK_SETUP.md  PERFORMANCE_OPTIMIZATION.md  PRODUCTION_DEPLOYMENT.md  PRODUCT_VISION.md  RECOMMENDATION_SYSTEM.md  ROADMAP_MVP.md  SECURITY_MODEL.md  SYSTEM_MAP.md  TESTING.md  TESTING_REPORT.md  TESTING_REPORT_FIXED.md  TESTING_SUMMARY.md  USER_TESTING_GUIDE.md  UX_GUIDELINES.md  recommendation_system.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Footer.tsx  Header.tsx  Layout.tsx
frontend/src/components/design-system/: LunarCalendar.tsx  NatalChart.tsx  PlanetCard.tsx
frontend/src/components/design-system/__tests__/: LunarCalendar.test.tsx  NatalChart.test.tsx  PlanetCard.test.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/design-system/: components.css  icons.ts  index.ts  platform-styles.css  tokens.css  typography.css
frontend/src/design-system/__tests__/: icons.test.ts
frontend/src/pages/: CompatibilityPage.tsx  HomePage.tsx  HoroscopePage.tsx  LoginPage.tsx  LunarCalendarPage.tsx  NatalChartPage.tsx  ProfilePage.tsx  RegisterPage.tsx
frontend/src/services/: api.ts
frontend/src/test/: setup.ts
migrations/: env.py
migrations/versions/: 000_create_users_table.py  001_add_iot_tables.py  002_create_core_tables.py
scripts/: deploy_kerykeion.py
tests/: conftest.py  test_ai_horoscope_service.py  test_astrological_accuracy.py  test_astrology_calculator.py  test_async_kerykeion_service.py  test_config.py  test_conversation_manager.py  test_database.py  test_deployment_system.py  test_dialog_error.py  test_dialog_flow_manager.py  test_dialog_handler.py  test_dialog_handler_transits.py  test_encryption.py  test_enhanced_intent_recognition.py  test_enhanced_transit_service.py  test_error_recovery.py  test_gdpr_compliance.py  test_google_assistant_integration.py  test_horoscope_generator.py  test_integration_api.py  test_intent_recognition.py  test_iot_integration.py  test_kerykeion_performance_load.py  test_kerykeion_service.py  test_lunar_calendar.py  test_main.py  test_multi_platform_integration.py  test_natal_chart.py  test_performance.py  test_progressions.py  test_recommendation_system.py  test_response_formatter.py  test_russian_astrology_adapter.py  test_security.py  test_session_manager.py  test_telegram_integration.py  test_transit_calculator.py  test_transit_models.py  test_user_manager.py  (+6 more)
